コスト種別の取得APIを実装
